--- a/Bayesnet/notebook/Bayesnet.ipynb
+++ b/Bayesnet/notebook/Bayesnet.ipynb
@@ -14,7 +14,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# AbstractGraph"
+    "# Edge"
    ]
   },
   {
@@ -32,6 +32,13 @@
     "  # Adjust the weight of an Edge\n",
     "  def weight(self, weight):\n",
     "    self.weight = float(weight)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# VertexNode"
    ]
   },
   {
@@ -64,13 +71,38 @@
     "    # else:\n",
     "    #   raise Exception('Already connected!')\n",
     "\n",
+    "  # Print inNodes, outNodes, inwardEdges or outwardEdges of a node\n",
+    "  def printInOut(self, type='Node', dir='In'):\n",
+    "    print('+'*20)\n",
+    "    data = []\n",
+    "    lst = []\n",
+    "    DF = []\n",
+    "    if type == 'Node':\n",
+    "      if dir == 'In':\n",
+    "        lst = self.inNodes\n",
+    "      elif dir == 'Out':\n",
+    "        lst = self.outNodes\n",
+    "      for node in lst:\n",
+    "        data.append(node.value)\n",
+    "      print(dir + 'Nodes of {}'.format(self.value))\n",
+    "      DF = pd.DataFrame(np.array(data), columns=['Node'])\n",
+    "    elif type == 'Edge':\n",
+    "      if dir == 'In':\n",
+    "        lst = self.inwardEdges\n",
+    "      elif dir == 'Out':\n",
+    "        lst = self.outwardEdges\n",
+    "      for edge in lst:\n",
+    "        data.append([edge.fromNode.value, edge.toNode.value, edge.weight])\n",
+    "      print(dir + 'wardEdges of {}'.format(self.value))\n",
+    "      DF = pd.DataFrame(np.array(data), columns=['From', 'To', 'Weight'])\n",
+    "    print(DF)\n",
+    "    print('+'*20)\n",
+    "\n",
     "  # Disconnect a connected VertexNode from another VertexNode\n",
     "  @staticmethod\n",
     "  def disconnect(fromNode, toNode):\n",
-    "    print('*'*20)\n",
     "    if (toNode in fromNode.outNodes) & (fromNode in toNode.inNodes):\n",
     "      edge = (VertexNode).getEdge(fromNode, toNode)\n",
-    "      print('edge from {} to {}'.format(edge.fromNode.value, edge.toNode.value))\n",
     "      if edge is not None:\n",
     "        fromNode.outNodes.remove(toNode)\n",
     "        fromNode.totalOut -= 1\n",
@@ -82,7 +114,6 @@
     "      #   raise Exception('Edge not found!')\n",
     "    # else:\n",
     "    #   raise Exception('Not connected!')\n",
-    "    print('*'*20)\n",
     "\n",
     "  # Get edge between VertexNodes\n",
     "  @staticmethod\n",
@@ -98,12 +129,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Graph"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "class AbstractGraph():\n",
+    "class Graph():\n",
     "  def __init__(self, nodeList=[]):\n",
     "    self.nodeList = nodeList\n",
     "\n",
@@ -137,20 +175,11 @@
     "  def remove(self, value):\n",
     "    node = self.getVertexNode(value)\n",
     "    if node is not None:\n",
-    "      print('inNodes:')\n",
-    "      for inNode in node.inNodes:\n",
-    "        print(inNode.value)\n",
-    "      print('outNodes:')\n",
-    "      for outNode in node.outNodes:\n",
-    "        print(outNode.value)\n",
-    "      print('+'*20)\n",
-    "      for inNode in node.inNodes:\n",
-    "        print(inNode.value)\n",
+    "      for inNode in node.inNodes.copy():\n",
     "        VertexNode.disconnect(inNode, node)\n",
-    "#       for outNode in node.outNodes:\n",
-    "#         VertexNode.disconnect(node, outNode)\n",
-    "      print('+'*20)\n",
-    "#       self.nodeList.remove(node)\n",
+    "      for outNode in node.outNodes.copy():\n",
+    "        VertexNode.disconnect(node, outNode)\n",
+    "      self.nodeList.remove(node)\n",
     "    # else:\n",
     "    #   raise Exception('Vertex not found!')\n",
     "\n",
@@ -193,14 +222,14 @@
     "      edgeData.append([edge.fromNode.value, edge.toNode.value, edge.weight])\n",
     "    edgeDF = pd.DataFrame(np.array(edgeData), columns=['From', 'To', 'Weight'])\n",
     "    print(edgeDF)\n",
-    "    print('='*40)"
+    "    print('='*40)\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# DGraphModel"
+    "# Testing Graph"
    ]
   },
   {
@@ -234,28 +263,27 @@
       "8    4  2   10.0\n",
       "9    4  3    4.0\n",
       "========================================\n",
-      "inNodes:\n",
-      "0\n",
-      "2\n",
-      "4\n",
-      "outNodes:\n",
-      "2\n",
-      "3\n",
-      "++++++++++++++++++++\n",
-      "0\n",
-      "********************\n",
-      "edge from 0 to 1\n",
-      "********************\n",
-      "4\n",
-      "********************\n",
-      "edge from 4 to 1\n",
-      "********************\n",
-      "++++++++++++++++++++\n"
+      "========================================\n",
+      "Vertices:\n",
+      "  Vertex In Out\n",
+      "0      0  0   2\n",
+      "1      2  2   1\n",
+      "2      3  2   0\n",
+      "3      4  1   2\n",
+      "--------------------\n",
+      "Edges:\n",
+      "  From To Weight\n",
+      "0    0  2    3.0\n",
+      "1    0  4    2.0\n",
+      "2    2  3    2.0\n",
+      "3    4  2   10.0\n",
+      "4    4  3    4.0\n",
+      "========================================\n"
      ]
     }
    ],
    "source": [
-    "graph = AbstractGraph()\n",
+    "graph = Graph()\n",
     "\n",
     "graph.add('0')\n",
     "graph.add('1')\n",
@@ -277,7 +305,48 @@
     "\n",
     "graph.remove('1')\n",
     "\n",
-    "# graph.printGraph()"
+    "graph.printGraph()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Approximate Inference"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Generate new samples\n",
+    "def sampling(X=[], P=[], size=1):\n",
+    "  genList = np.random.uniform(0, 1, size)\n",
+    "  n = len(P)\n",
+    "  lowerP = np.dot(P, np.tri(n, n, -1).T)\n",
+    "  clf_matrix = genList.reshape(len(genList), 1) - lowerP.reshape(1, len(lowerP))\n",
+    "  clf_idx = np.apply_along_axis(lambda x: len(x[x >= 0]) - 1, 1, clf_matrix)\n",
+    "\n",
+    "  return np.array(X)[clf_idx]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['G' 'K' 'Y' 'TB' 'G']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(sampling(X=['Y','TB','K','G'], P=[0.1,0.3,0.4,0.2], size=5))"
    ]
   },
   {
